remove-desktop-check

--- a/.github/workflows/release-electron-app.yml
+++ b/.github/workflows/release-electron-app.yml
@@ -16,7 +16,6 @@ jobs:
   check-release:
     runs-on: ubuntu-latest
     outputs:
-      is-desktop: ${{ steps.check.outputs.is-desktop }}
       version: ${{ steps.check.outputs.version }}
       target: ${{ steps.check.outputs.target }}
     steps:
@@ -25,17 +24,11 @@ jobs:
           TAG="${{ github.event.release.tag_name }}"
           TARGET="${{ github.event.release.target_commitish }}"
 
-          if [[ "$TAG" == desktop-v* ]]; then
-            echo "is-desktop=true" >> $GITHUB_OUTPUT
-            echo "version=${TAG#desktop-v}" >> $GITHUB_OUTPUT
-            echo "target=$TARGET" >> $GITHUB_OUTPUT
-          else
-            echo "is-desktop=false" >> $GITHUB_OUTPUT
-          fi
+          echo "version=${TAG#v}" >> $GITHUB_OUTPUT
+          echo "target=$TARGET" >> $GITHUB_OUTPUT
 
   build-windows:
     needs: check-release
-    if: needs.check-release.outputs.is-desktop == 'true'
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
@@ -95,7 +88,6 @@ jobs:
 
   build-macos:
     needs: check-release
-    if: needs.check-release.outputs.is-desktop == 'true'
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
