--- a/.github/workflows/release-electron-app.yml
+++ b/.github/workflows/release-electron-app.yml
@@ -57,34 +57,12 @@ jobs:
         run: npm ci --prefer-offline
         working-directory: src/ui
 
-      - name: Build Windows app
-        run: npm run make
+      - name: Publish Windows app
+        run: npm run publish
         env:
           NODE_ENV: production
           CI: true
-
-      - name: Prepare release assets
-        shell: pwsh
-        run: |
-          $installer = Get-ChildItem "out/make/squirrel.windows/x64" -Filter "*.exe" -Recurse |
-                       Where-Object { $_.Name -notlike "*-full.nupkg" } | Select-Object -First 1
-          if (-not $installer) { throw "Windows installer not found" }
-
-          New-Item -ItemType Directory -Force -Path "out/release-assets" | Out-Null
-          Copy-Item $installer.FullName "out/release-assets/${{ env.APP_NAME }}-Windows-v${{ needs.check-release.outputs.version }}.exe"
-
-          $releases = Get-ChildItem "out/make/squirrel.windows/x64" -Filter "RELEASES" -Recurse | Select-Object -First 1
-          if ($releases) { Copy-Item $releases.FullName "out/release-assets/RELEASES" }
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: windows-installers
-          path: out/release-assets/
-          retention-days: 5
-
-      - uses: softprops/action-gh-release@v2
-        with:
-          files: out/release-assets/*
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-macos:
     needs: check-release
@@ -115,46 +93,9 @@ jobs:
         run: npm ci --prefer-offline
         working-directory: src/ui
 
-      - name: Build macOS app
-        run: npm run make
+      - name: Publish macOS app
+        run: npm run publish
         env:
           NODE_ENV: production
           CI: true
-
-      - name: Prepare release assets
-        run: |
-          # Try to find the zip file in various possible locations
-          PACKAGE=$(find out/make -name "*.zip" -type f | head -n 1)
-
-          if [ -z "$PACKAGE" ]; then
-            echo "ERROR: macOS package not found"
-            echo "Searched in out/make for .zip files"
-            find out -type f
-            exit 1
-          fi
-
-          echo "Found package: $PACKAGE"
-          mkdir -p out/release-assets
-          cp "$PACKAGE" "out/release-assets/${{ env.APP_NAME }}-macOS-v${{ needs.check-release.outputs.version }}.zip"
-
-          # Copy update metadata files if they exist (needed for auto-updates)
-          LATEST=$(find out/make -name "latest-mac.yml" -type f | head -n 1)
-          if [ -n "$LATEST" ]; then
-            echo "Found latest-mac.yml: $LATEST"
-            cp "$LATEST" out/release-assets/latest-mac.yml
-          else
-            echo "Warning: latest-mac.yml not found - auto-updates may not work"
-          fi
-
-          echo "Release assets prepared successfully"
-          ls -la out/release-assets/
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: macos-installers
-          path: out/release-assets/
-          retention-days: 5
-
-      - uses: softprops/action-gh-release@v2
-        with:
-          files: out/release-assets/*
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
