--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^17.2.2",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^11.0.2",
+    "get-port": "^7.1.0",
     "google-auth-library": "^10.3.0",
     "googleapis": "^160.0.0",
     "openai": "^6.3.0",
