--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -61,10 +61,19 @@ jobs:
           echo "pr_sha=$shortSha" >> $env:GITHUB_OUTPUT
 
       - name: Update version for pre-release
+        shell: pwsh
         run: |
           $tagName = "${{ steps.pr_info.outputs.tag }}"
-          $version = $tagName -replace "^pr-", ""
-          npm version $version --no-git-tag-version
+          if ($tagName -notmatch '^pr-(\d+)-([0-9a-fA-F]{7})$') {
+            throw "Unexpected tag format: $tagName"
+          }
+
+          $prNumber = $Matches[1]
+          $shortSha = $Matches[2]
+          $baseVersion = (node -p 'require("./package.json").version.split("-")[0]').Trim()
+          $preReleaseVersion = "$baseVersion-pr.$prNumber.$shortSha"
+
+          npm version $preReleaseVersion --no-git-tag-version
 
       - name: Publish Windows pre-release
         run: npm run publish -- --win --publish never
@@ -132,8 +141,17 @@ jobs:
       - name: Update version for pre-release
         run: |
           TAG_NAME="${{ steps.pr_info.outputs.tag }}"
-          VERSION=$(echo "$TAG_NAME" | sed 's/^pr-//')
-          npm version "$VERSION" --no-git-tag-version
+          if [[ ! "$TAG_NAME" =~ ^pr-([0-9]+)-([0-9a-fA-F]{7})$ ]]; then
+            echo "Unexpected tag format: $TAG_NAME"
+            exit 1
+          fi
+
+          PR_NUMBER="${BASH_REMATCH[1]}"
+          SHORT_SHA="${BASH_REMATCH[2]}"
+          BASE_VERSION=$(node -p 'require("./package.json").version.split("-")[0]')
+          PRE_RELEASE_VERSION="${BASE_VERSION}-pr.${PR_NUMBER}.${SHORT_SHA}"
+
+          npm version "$PRE_RELEASE_VERSION" --no-git-tag-version
 
       - name: Publish macOS pre-release
         run: npm run publish -- --mac --publish never
