--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -99,6 +99,7 @@ jobs:
           allowUpdates: true
           overwrite: true
           files: |
+            build/latest.yml
             build/YakShaver.Setup*.exe
           draft: false
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -181,7 +182,9 @@ jobs:
           prerelease: true
           allowUpdates: true
           overwrite: true
-          files: build/**/*.zip
+          files:
+            - build/**/*.zip
+            - build/latest.yml
           draft: false
           token: ${{ secrets.GITHUB_TOKEN }}
 
