--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -64,15 +64,11 @@ jobs:
         shell: pwsh
         run: |
           $prNumber = "${{ steps.pr_info.outputs.pr_number }}"
-          $shortSha = "${{ steps.pr_info.outputs.pr_sha }}"
           if (-not $prNumber) {
             throw "Missing PR number output"
           }
-          if (-not $shortSha) {
-            throw "Missing PR SHA output"
-          }
           $baseVersion = (node -p 'require("./package.json").version.split("-")[0]').Trim()
-          $preReleaseVersion = "$baseVersion-pr.$prNumber.$shortSha"
+          $preReleaseVersion = "$baseVersion-pr.$prNumber"
 
           npm version $preReleaseVersion --no-git-tag-version
 
@@ -96,8 +92,6 @@ jobs:
             
             This is an automated pre-release. It will be updated automatically when new commits are pushed to the PR.
           prerelease: true
-          allowUpdates: true
-          overwrite: true
           files: |
             build/latest.yml
             build/YakShaver Setup*.exe
@@ -147,17 +141,12 @@ jobs:
       - name: Update version for pre-release
         run: |
           PR_NUMBER="${{ steps.pr_info.outputs.pr_number }}"
-          SHORT_SHA="${{ steps.pr_info.outputs.pr_sha }}"
           if [[ -z "$PR_NUMBER" ]]; then
             echo "Missing PR number output"
             exit 1
           fi
-          if [[ -z "$SHORT_SHA" ]]; then
-            echo "Missing PR SHA output"
-            exit 1
-          fi
           BASE_VERSION=$(node -p 'require("./package.json").version.split("-")[0]')
-          PRE_RELEASE_VERSION="${BASE_VERSION}-pr.${PR_NUMBER}.${SHORT_SHA}"
+          PRE_RELEASE_VERSION="${BASE_VERSION}-pr.${PR_NUMBER}"
 
           npm version "$PRE_RELEASE_VERSION" --no-git-tag-version
 
@@ -181,8 +170,6 @@ jobs:
             
             This is an automated pre-release. It will be updated automatically when new commits are pushed to the PR.
           prerelease: true
-          allowUpdates: true
-          overwrite: true
           files: |
             build/YakShaver-*-mac.zip
             build/YakShaver-*-mac.zip.blockmap
