--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
         "owner": "SSWConsulting",
         "repo": "SSW.YakShaver.Desktop",
         "private": false,
-        "releaseType": "${env.RELEASE_TYPE || 'release'}",
+        "releaseType": "${env.RELEASE_TYPE}",
         "channel": "${env.CHANNEL || 'latest'}"
       }
     ]
