--- a/.github/workflows/pr-release-v2.yml
+++ b/.github/workflows/pr-release-v2.yml
@@ -146,7 +146,9 @@ jobs:
           npm version $version --no-git-tag-version
 
       - name: Publish Windows pre-release
-        run: npm run publish -- --win --publish always
+        run: |
+          $channel = "${{ needs.cleanup-release.outputs.channel }}"
+          npm run publish -- --win --publish always "-c.publish.channel=$channel" "-c.publish.releaseType=prerelease"
         env:
           NODE_ENV: production
           CI: true
@@ -210,7 +212,9 @@ jobs:
           npm version "$VERSION" --no-git-tag-version
 
       - name: Publish macOS pre-release
-        run: npm run publish -- --mac --publish always
+        run: |
+          CHANNEL="${{ needs.cleanup-release.outputs.channel }}"
+          npm run publish -- --mac --publish always "-c.publish.channel=${CHANNEL}" "-c.publish.releaseType=prerelease"
         env:
           NODE_ENV: production
           CI: true
