--- a/package.json
+++ b/package.json
@@ -4,71 +4,7 @@
   "version": "0.3.7",
   "description": "YakShaver, an AI agent to help you trim the fluff and get straight to the point",
   "main": "dist/index.js",
-  "build": {
-    "generateUpdatesFilesForAllChannels": true,
-    "appId": "com.ssw.yakshaver",
-    "productName": "YakShaver",
-    "directories": {
-      "output": "build",
-      "buildResources": "src/ui/public/icons"
-    },
-    "files": [
-      "**/*",
-      "!**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
-      "!src/ui/**",
-      "src/ui/dist/**",
-      "!src/backend/**",
-      "!**/*.ts",
-      "!**/node_modules/**/*.md"
-    ],
-    "extraResources": [
-      ".env",
-      "src/ui/public/**"
-    ],
-    "asar": true,
-    "asarUnpack": [
-      "src/ui/dist/**",
-      "**/@ffmpeg-installer/**"
-    ],
-    "afterPack": "./afterPack.js",
-    "win": {
-      "icon": "src/ui/public/icons/icon.ico",
-      "target": [
-        {
-          "target": "nsis",
-          "arch": [
-            "x64"
-          ]
-        }
-      ]
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true
-    },
-    "mac": {
-      "icon": "src/ui/public/icons/icon.icns",
-      "target": [
-        "zip"
-      ]
-    },
-    "linux": {
-      "icon": "src/ui/public/icons/icon.png",
-      "target": [
-        "deb"
-      ]
-    },
-    "publish": [
-      {
-        "provider": "github",
-        "owner": "SSWConsulting",
-        "repo": "SSW.YakShaver.Desktop",
-        "private": false,
-        "releaseType": "release",
-        "channel": "beta"
-      }
-    ]
-  },
+  "build": {},
   "scripts": {
     "setup": "concurrently \"npm install\"  \"cd src/ui && npm install\"",
     "build": "tsc",
