--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -60,7 +60,8 @@ jobs:
 
           echo "Finding and deleting existing releases for PR #${PR_NUMBER}"
 
-          RELEASE_IDS=$(gh api /repos/${{ github.repository }}/releases?per_page=100 --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | .id")
+          # Use --paginate to get all releases, not just first 100
+          RELEASE_IDS=$(gh api --paginate /repos/${{ github.repository }}/releases --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | .id")
 
           for id in $RELEASE_IDS; do
             if [ -n "$id" ]; then
@@ -70,7 +71,7 @@ jobs:
           done
 
           # Also clean up associated tags
-          TAG_NAMES=$(gh api /repos/${{ github.repository }}/releases?per_page=100 --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | .tag_name")
+          TAG_NAMES=$(gh api --paginate /repos/${{ github.repository }}/releases --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | .tag_name")
 
           for tag in $TAG_NAMES; do
             if [ -n "$tag" ]; then
@@ -269,7 +270,8 @@ jobs:
 
           echo "Deleting all releases for closed PR #${PR_NUMBER}"
 
-          RELEASE_IDS=$(gh api /repos/${{ github.repository }}/releases?per_page=100 --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | .id")
+          # Use --paginate to get all releases, not just first 100
+          RELEASE_IDS=$(gh api --paginate /repos/${{ github.repository }}/releases --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | .id")
 
           for id in $RELEASE_IDS; do
             if [ -n "$id" ]; then
@@ -278,7 +280,7 @@ jobs:
             fi
           done
 
-          TAG_NAMES=$(gh api /repos/${{ github.repository }}/releases?per_page=100 --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | .tag_name")
+          TAG_NAMES=$(gh api --paginate /repos/${{ github.repository }}/releases --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | .tag_name")
 
           for tag in $TAG_NAMES; do
             if [ -n "$tag" ]; then
