--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -60,8 +60,13 @@ jobs:
 
           echo "Finding and deleting existing releases for PR #${PR_NUMBER}"
 
-          RELEASE_IDS=$(gh api --paginate /repos/${{ github.repository }}/releases --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | .id")
+          # Collect both release IDs and tag names BEFORE deleting anything
+          RELEASES_DATA=$(gh api --paginate /repos/${{ github.repository }}/releases --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | {id: .id, tag: .tag_name}")
 
+          RELEASE_IDS=$(echo "$RELEASES_DATA" | jq -r '.id')
+          TAG_NAMES=$(echo "$RELEASES_DATA" | jq -r '.tag')
+
+          # Now delete the releases
           for id in $RELEASE_IDS; do
             if [ -n "$id" ]; then
               echo "Deleting release ID: $id"
@@ -69,9 +74,7 @@ jobs:
             fi
           done
 
-          # Also clean up associated tags
-          TAG_NAMES=$(gh api --paginate /repos/${{ github.repository }}/releases --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | .tag_name")
-
+          # Clean up associated tags (collected before deletion)
           for tag in $TAG_NAMES; do
             if [ -n "$tag" ]; then
               echo "Deleting tag: $tag"
@@ -261,9 +264,16 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           PR_NUMBER="${{ github.event.pull_request.number }}"
-          echo "Deleting all releases for closed PR #${PR_NUMBER}"
-          RELEASE_IDS=$(gh api --paginate /repos/${{ github.repository }}/releases --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | .id")
 
+          echo "Deleting all releases for closed PR #${PR_NUMBER}"
+
+          # Collect both release IDs and tag names BEFORE deleting anything
+          RELEASES_DATA=$(gh api --paginate /repos/${{ github.repository }}/releases --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | {id: .id, tag: .tag_name}")
+
+          RELEASE_IDS=$(echo "$RELEASES_DATA" | jq -r '.id')
+          TAG_NAMES=$(echo "$RELEASES_DATA" | jq -r '.tag')
+
+          # Delete the releases
           for id in $RELEASE_IDS; do
             if [ -n "$id" ]; then
               echo "Deleting release ID: $id"
@@ -271,8 +281,7 @@ jobs:
             fi
           done
 
-          TAG_NAMES=$(gh api --paginate /repos/${{ github.repository }}/releases --jq ".[] | select(.body | contains(\"PR #${PR_NUMBER}\")) | .tag_name")
-
+          # Clean up associated tags (collected before deletion)
           for tag in $TAG_NAMES; do
             if [ -n "$tag" ]; then
               echo "Deleting tag: $tag"
