--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -12,6 +12,10 @@ env:
   APP_NAME: SSW.YakShaver
   NODE_VERSION: 20
 
+concurrency:
+  group: pr-pre-release-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   cleanup-release:
     if: |
