--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "google-auth-library": "^10.3.0",
     "googleapis": "^160.0.0",
     "openai": "^6.3.0",
-    "tmp": "^0.2.5"
+    "tmp": "^0.2.5",
+    "yt-dlp-exec": "^1.0.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
