--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 YOUTUBE_CLIENT_ID=your_youtube_client_id_here
 YOUTUBE_CLIENT_SECRET=your_youtube_client_secret_here
+
+GITHUB_APP_INSTALLATION_LINK=your_app_installation_link_here
